Updated gradle and made the code work with java 17